[tool.poetry]
name = "pyprojects"
version = "0.1.0"
description = "Python projects and examples"
authors = ["Michael Napodano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dacite = "^1.8.1"
attr = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
